welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: type i
  while(nums[i]!= lookingFor && i<nums.lenght)
             ^indexOfValue:3: error: value nums of type Array[Int] does not take type parameters.
  while(nums[i]!= lookingFor && i<nums.lenght)
            ^indexOfValue:3: error: value lenght is not a member of Array[Int]
  while(nums[i]!= lookingFor && i<nums.lenght)
                                       ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
  while(nums[i]!= lookingFor && i<nums.lenght)
  ^